added weather support for i3blocks. Script and configuration inspired by icemodding/i3 on github

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -33,14 +33,14 @@ markup=none
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
-#label=VOL
-label=♪
-instance=Master
-#instance=PCM
-interval=1
-signal=10
-command=/usr/share/i3blocks/volume 5 pulse
+# [volume]
+# label=VOL
+# label=♪
+# instance=Master
+# instance=PCM
+# interval=1
+# signal=10
+# command=/usr/share/i3blocks/volume 5 pulse
 
 # Memory usage
 #
@@ -62,7 +62,7 @@ command=/usr/share/i3blocks/volume 5 pulse
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=HOME
+label=~/
 #instance=/mnt/data
 interval=30
 
@@ -72,7 +72,7 @@ interval=30
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#00FF00
+color=#FFFFFF
 interval=10
 separator=false
 
@@ -102,32 +102,32 @@ min_width=CPU: 100.00%
 #
 # The battery instance defaults to 0.
 [battery]
-label=BAT
-#label=⚡
+# label=BAT
+label=⚡
 #instance=1
 interval=30
 
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
-#command=data '+%d-%m-%Y %H:%M:%S'
+# command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%d.%m %Y %H:%M:%S'
 interval= 1
 
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
+[mediaplayer]
+instance=spotify
+interval=5
+signal=10
 
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
+[openvpn]
+interval=20
 
 # Temperature
 #
@@ -153,3 +153,9 @@ interval= 1
 #instance=NUM
 #interval=once
 #signal=11
+
+# Weather
+[Weather]
+command=~/.config/i3/scripts/weather.sh "unna"
+interval=1800
+color=#9c9ff
