--- a/i3/config
+++ b/i3/config
@@ -185,7 +185,7 @@ hide_edge_borders both
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3blocks -c ~/.config/i3/i3blocks.conf
+       status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
 
 bindsym $mod+control+l exec i3lock --color "$bg-color"
@@ -217,3 +217,5 @@ exec --no-startup-id nm-applet
 exec_always feh --bg-scale /home/philipp/Pictures/Firefox_wallpaper.png
 exec compton -f
 
+# Polybar
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
