--- a/i3/config
+++ b/i3/config
@@ -219,3 +219,7 @@ exec compton -f
 
 # Polybar
 # exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
+# Enable screen brightness controls
+bindsym XF86MonBrightnessUp exec light -A 10
+bindsym XF86MonBrightnessDown exec light -U 10
