--- a/i3/config
+++ b/i3/config
@@ -184,11 +184,11 @@ hide_edge_borders both
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-       status_command i3blocks -c ~/.config/i3/i3blocks.conf
-}
+# bar {
+#       status_command i3blocks -c ~/.config/i3/i3blocks.conf
+# }
 
-bindsym $mod+control+l exec i3lock --color "$bg-color"
+bindsym $mod+shift+l exec i3lock --color "$bg-color"
 
 # Keybinding for monitor-switching shell script
 
@@ -198,9 +198,9 @@ bindsym $mod+Shift+m exec --no-startup-id ~/.config/i3/monitor_switch.sh
 # set $ws_path "~/.config/i3/workspaces"
 
 # Workspace assignment
-assign [class="^TeXstudio$"] → $workspace3
-assign [class="^Thunderbird$"] → $workspace5
-for_window [class="^Spotify$"] move to workspace $workspace10
+# assign [class="^TeXstudio$"] → $workspace3
+# assign [class="^Thunderbird$"] → $workspace5
+# for_window [class="^Spotify$"] move to workspace $workspace10
 
 # Load saved workspace layouts
 exec --no-startup-id i3-msg 'workspace 1: Calendar/Todo; append_layout ~/.config/i3/workspaces/ws1.json'
@@ -232,3 +232,6 @@ gaps outer 5
 
 # Disable titlebars
 for_window [class="^.*"] border pixel 0
+
+## Add polybar
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
