--- a/i3/config
+++ b/i3/config
@@ -185,7 +185,10 @@ hide_edge_borders both
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
-#       status_command i3blocks -c ~/.config/i3/i3blocks.conf
+#       height 27
+#       mode dock
+#       position top
+#       i3bar_command i3bar -t
 # }
 
 bindsym $mod+control+l exec i3lock --color "$bg-color"
@@ -200,7 +203,7 @@ bindsym $mod+Shift+m exec --no-startup-id ~/.config/i3/monitor_switch.sh
 # Workspace assignment
 # assign [class="^TeXstudio$"] → $workspace3
 # assign [class="^Thunderbird$"] → $workspace5
-# for_window [class="^Spotify$"] move to workspace $workspace10
+for_window [class="^Spotify$"] move to workspace $workspace10
 
 # Load saved workspace layouts
 exec --no-startup-id i3-msg 'workspace 1: Calendar/Todo; append_layout ~/.config/i3/workspaces/ws1.json'
@@ -216,9 +219,6 @@ exec --no-startup-id nm-applet
 # Background image
 exec_always feh --bg-scale /home/philipp/Pictures/Firefox_wallpaper.png
 exec compton -f
-
-# Polybar
-# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Enable screen brightness controls
 bindsym XF86MonBrightnessUp exec light -A 10
